Fix scrollbar underneath image in entity detail pane

--- a/web/war/src/main/webapp/less/detail/detail.less
+++ b/web/war/src/main/webapp/less/detail/detail.less
@@ -530,8 +530,16 @@
     padding: 0;
   }
 
-  .nav-with-background {
-    margin: 175px 0 0 0;
+  .nav-with-background {  
+    overflow: auto;    
+    margin: 200px 0 0 0;
+    padding: 0;
+    position: absolute;
+    top: 0;    
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%; 
 
     .relationships {
       padding-bottom: 1em;
